Fixed facebook overlap problem in the About Us Page

--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin-bottom: 0;
     height: 100%;
     color: #fff;
     text-shadow: 0 2px 0 #000;
